# agendrr

./: .gitignore  Cargo.toml  README.md  agendrr.example.yaml  flake.nix
.github/workflows/: promote.yml  push.yml  release.yml
snap/: snapcraft.yaml
src/: config.rs  event.rs  main.rs
src/clients/: google_calendar.rs  mod.rs
src/filters/: all_day.rs
src/handlers/: calendly.rs  default.rs  interview.rs  mapped.rs  mod.rs  one_to_one.rs  regular.rs
