[package]
name = "agendrr"
version = "0.1.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.34", features = ["derive"] }
confy = { version = "0.6.1", features = [
    "yaml_conf",
], default-features = false }
glob = "0.3.1"
google-calendar3 = "*"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde-email = "3.1.0"
serde_regex = "1.1.0"
tokio = { version = "1.44", features = ["full"] }
xdg = "2.5.2"
