[package]
name = "agendrr"
version = "0.1.2"
edition = "2024"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
confy = { version = "1.0.0", features = [
    "yaml_conf",
], default-features = false }
glob = "0.3.3"
google-calendar3 = "*"
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
serde-email = "3.2.0"
serde_regex = "1.1.0"
tokio = { version = "1.48", features = ["full"] }
xdg = "3.0.0"
